[project]
name = "mastering-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "langchain",
    "langchain-community",
    "langchain-google-genai",
    "google-generativeai",
    "faiss-cpu",
    "beautifulsoup4",
    "requests",
    "lxml",
    "pymupdf>=1.25.5",
    "openai>=1.84.0",
]
